--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -35,23 +35,20 @@ img {
     display: block;
 }
 
-/* Aqui estico no caso a imagem, para caber no container */
-.actionImage {
-    width: 100%;
-}
 
+/* Controle do Background */
 .image {
     background-image: url("/assets/image1.png");
-    width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top right;
-    height: 70vh;
+    height: 85vh;
     position: relative;
     display: flex;
 
 }
 
+/* Controle da frase */
 .card {
 
     width: 20%;
@@ -64,36 +61,49 @@ img {
 
 }
 
+#menuMobile{
+    display: none;
+}
+
+/* Responsividade Mobile */
 @media (max-width:430px) {
     .container {
+        background-size: cover;
         background-repeat: no-repeat;
-        width: 100%;
         position: relative;
+    } 
+    header {
+        margin: 0 10%;
+        flex-direction: row-reverse;
     }
-
     nav {
         width: 0;
         visibility: hidden;
     }
-
-    header {
+    .logo{
         display: flex;
-        justify-content: space-between;
-
-    }
+        justify-content: center; 
+    }.image{
+        height: 65vh;
+    }#menuMobile{
+        size: 10px;
+        display: block;
+        };
+    
 }
-
 .card {
     border: 0.74px solid;
-    border-image-source: linear-gradient(106.41deg, rgba(255, 255, 255, 0.74) 14.66%, rgba(122, 184, 193, 0.51) 40.34%, rgba(139, 206, 217, 0.47) 65.63%, rgba(144, 214, 225, 0.69) 90.52%);
+    border-image-source: linear-gradient(106.41deg, rgba(255, 255, 255, 0.74) 14.66%, rgba(122, 184, 193, 0.51) 
+    40.34%, rgba(139, 206, 217, 0.47) 65.63%, rgba(144, 214, 225, 0.69) 90.52%);
     background: linear-gradient(109.58deg, rgba(255, 255, 255, 0.4) 12.81%, rgba(255, 255, 255, 0.1) 75.74%);
     box-shadow: 0px -0.7425373196601868px 12.25186538696289px 0px rgba(0, 0, 0, 0.1);
     width: 300px;
-    height: 200px;
+    height: 150px;
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    bottom: -200px;
     text-align: center;
     flex-direction: column;
+    /* Manter fixo */
+    transform: translate(-0%,-15%);
+
 }
