--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,14 +1,19 @@
+:root {
+    --background: #B7E7EF;
+    --textPrimary: #4B6F75;
+}
+
 body {
     font-family: 'Roboto,Arial';
     font-size: 1.3rem;
-    background-color: #B7E7EF;
+    background-color: var(--background);
     margin: 0%;
 
 }
 
 a {
     text-decoration: none;
-    color: #4B6F75;
+    color:var(--textPrimary)
 }
 
 header {
@@ -48,7 +53,7 @@ img {
     height: 85vh;
     position: relative;
     display: flex;
-    border-top: solid 1px #4B6F75;
+    border-top: solid 1pxvar(--textPrimary)
 
 }
 
@@ -84,11 +89,61 @@ img {
 
 }
 /* Conteudo após a foto principal */
-.sectionThumb{
-    display: flex;
-    justify-content: center;
+.titleThumb{
+    max-width: 1400px;
+    width: 100%;
+    margin: 0 auto;
+
+    & .thumb-container {
+        display: grid;
+        gap: 4rem;
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+}
+.titleH1{
+    color:var(--textPrimary);
+    font-family: 'Roboto';
+    text-align:center ;
+    margin: 4rem;
 }
 
+.rodape{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 2rem;
+    padding: 2rem 0;
+
+    & .rodape-input {
+        input{
+            background: none;
+            border: 1px solid var(--textPrimary);
+            padding: 0.5rem;
+            border-radius: 10px;
+            width: 120%;
+            
+        }
+        p{
+            margin: 0.2rem;
+            font-size: 1.4rem;
+            color: var(--textPrimary);
+        }
+    }
+    
+    & .rodape-container{
+        display: flex;
+        gap: 2rem;
+        font-size: 1.4rem;
+
+
+        & :is(.left, .right) {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            color: var(--textPrimary);
+        }
+    }
+}
 /* Elemento só é mostrado no Mobile */
 #menuMobile{
     display: none;
@@ -144,6 +199,7 @@ img {
     }
     .image{
     height: 72vh;
+    background-position: 93% 93%;
     }
     #menuMobile{
     size: 10px;
@@ -159,16 +215,23 @@ img {
     font-weight: 600;
     line-height: 58.26px;
     text-align: center;
-    color: #4B6F75;
+    color:var(--textPrimary);
     display: flex;
+    
     }
-    .sectionThumb{
+    .titleThumb{
+    margin-top: 17%;
+    margin-bottom: 20%;
     width: 410.14px;
     height: 174px;
     top: 34px;
     left: 10px;
     gap: 0px;
-    opacity: 0px;    
+    opacity: 0px;
+
     }
- 
+    .thumb{
+    display: flex; 
+
+    }
   };
